@@ -1,9 +1,6 @@
 package LC200;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
  * 
@@ -36,7 +33,7 @@ public class LC247 {
     public List<String> findStrobogrammatic(int n) {
         List<String> res = new ArrayList<>();
         if (n == 1) {
-            return List.of(new String[] {"0","1","8"});
+            return Arrays.asList(new String[] {"0","1","8"});
         }
         char[] data = new char[n];
         dfs(0, n - 1, res, data);
